--- a/index.html
+++ b/index.html
@@ -26,16 +26,21 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<h1>Jessica Hsieh</h1>
+				<section id="intro" class="wrapper style1 fullscreen fade-up">
+					<div class="inner">
+						<div class="content">
+							<h1>Hello</h1>
+							<h1>My name is Jessica</h1>
 							<p>Hello, Welcome to my portfolio</p>
 							<ul class="actions">
 								<li><a href="Jessica Hsieh_Resume.pdf" download class="button download-btn">Download My Resume</a></li>
 							</ul>
 						</div>
-					</section>
+						<div class="profile-picture">
+							<img src="images/Jessica_image.jpeg" alt="Jessica Hsieh Profile Picture">
+						</div>
+					</div>
+				</section>
 
 				<!-- One -->
 					<section id="one" class="wrapper style3 fade-up">
@@ -83,38 +88,40 @@
 				<!-- Two -->	
 					<section id="two" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="javascript:void(0);" class="image"><img src="images/heart_disease_predic.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Heart Disease Prediction (Streamlit)</h2>
+									<p>The primary purpose of this app is to showcase my machine learning skills by building and evaluating a predictive model for heart disease. This includes demonstrating the use of various evaluation metrics and the importance of hyperparameter tuning in creating effective models.
+									</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://github.com/jessih828/Heart-Disease-Analytics?tab=readme-ov-file" class="button">Access GitHub</a></li>
+										<li><a href="https://heart-disease-ml-analytics.streamlit.app/" class="button">Access Streamlit App</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="javascript:void(0);" class="image"><img src="images/obesity_data_architecture.png" alt="" data-position="50% 50%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Obesity Muti-Class Classification</h2>
+									<p>This project demonstrates the use of Apache Spark for classifying obesity levels in individuals based on various features. The analysis is implemented in a Jupyter Notebook and covers data processing, model training, and evaluation using PySpark's MLlib</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://github.com/jessih828/Modern-Data-Architecture-Muti-Class-Classification" class="button">Access GitHub</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="javascript:void(0);" class="image"><img src="images/SQL_database.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>SQL Database Management System</h2>
+									<p>This project contains the SQL scripts and database design for managing a mobile phone store's operations. Developed as a group project for SQL Based Data Architectures II, this project includes scripts for database creation, data insertion, and complex queries to answer business-critical questions.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://github.com/jessih828/SQL_DBManagementSystem" class="button">Access GitHub</a></li>
 									</ul>
 								</div>
 							</div>
@@ -147,15 +154,6 @@
 					</section>
 
 			</div>
-
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
