--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 							<li><a href="#three">Get In Touch With Me</a></li>
 						</ul>
 						<div class="social-icons">
-							<a href="https://github.com/your-profile" target="_blank"><i class="fab fa-github"></i></a>
-							<a href="https://linkedin.com/in/your-profile" target="_blank"><i class="fab fa-linkedin"></i></a>
+							<a href="https://github.com/jessih828"><i class="fab fa-github"></i></a>
+							<a href="https://www.linkedin.com/in/hsieh-jessica/"><i class="fab fa-linkedin"></i></a>
 						</div>
 					</nav>
 				</div>
@@ -66,7 +66,13 @@
 								<section class="project">
 									<img src="images/heart_disease_app.png" alt="heart disease image">
 									<h3>Heart Disease Prediction (Streamlit)</h3>
-									<p>The primary purpose of this app is to showcase my machine learning skills by building and evaluating a predictive model for heart disease. This includes demonstrating the use of various evaluation metrics and the importance of hyperparameter tuning in creating effective models</p>
+									<p>The purpose of this app is to showcase my machine learning skills by building and evaluating predictive models for heart disease. This includes demonstrating the use of various evaluation metrics and the importance of hyperparameter tuning in creating effective models</p>
+									<div class="skills">
+										<span class="skill-icon">Python</span>
+										<span class="skill-icon">Scikit-learn</span>
+										<span class="skill-icon">Plotly</span>
+										<span class="skill-icon">Streamlit</span>
+									</div>
 									<ul class="actions">
 										<li><a href="https://github.com/jessih828/Heart-Disease-Analytics?tab=readme-ov-file" class="button small-button">GitHub Repo</a></li>
 										<li><a href="https://heart-disease-ml-analytics.streamlit.app/" class="button small-button">Deploy Streamlit App</a></li>
@@ -76,6 +82,11 @@
 									<img src="images/muti class.png" alt="muti class classification">
 									<h3>Obesity Muti-Class Classification</h3>
 									<p>This project demonstrates the use of Apache Spark for classifying obesity levels in individuals based on various features. The analysis is implemented in a Jupyter Notebook and covers data processing, model training, and evaluation using PySpark's MLlib</p>
+									<div class="skills">
+										<span class="skill-icon">PySpark</span>
+										<span class="skill-icon">Muti-Class Classification</span>
+										<span class="skill-icon">Modern Data Architecture</span>
+									</div>
 									<ul class="actions">
 										<li><a href="https://github.com/jessih828/Modern-Data-Architecture-Muti-Class-Classification" class="button small-button">GitHub Repo</a></li>
 									</ul>
@@ -83,7 +94,12 @@
 								<section class="project">
 									<img src="images/SQL.png" alt="muti class classification">
 									<h3>SQL Database Management System</h3>
-									<p>This project contains the SQL scripts and database design for managing a mobile phone store's operations. Developed as a group project for SQL Based Data Architectures II, this project includes scripts for database creation, data insertion, and complex queries to answer business-critical questions</p>
+									<p>This database is designed for a mobile phone store, it includes scripts for database creation, data insertion, and complex queries, with tables like Inventory, Supplier, Phone, Customer, and Payment_Info, ensuring data integrity and 3NF normalization</p>
+									<div class="skills">
+										<span class="skill-icon">SQL</span>
+										<span class="skill-icon">MySQL</span>
+										<span class="skill-icon">Database Creation</span>
+									</div>
 									<ul class="actions">
 										<li><a href="https://github.com/jessih828/SQL_DBManagementSystem" class="button small-button">GitHub Repo</a></li>
 									</ul>
