--- a/index.html
+++ b/index.html
@@ -108,51 +108,49 @@
 						</div>
 					</section>
 
-				<!-- Two -->	
-					<section id="two" class="wrapper style2 spotlights">
-						<section>
-							<div class="content">
-								<div class="inner">
-									<h2>Skills and Tools</h2>
-									<div class="skills-entry">
-										<p>I’m currently working with 🐍 Python & 💿 SQL</p>
-										<p>Engaged in learning and using libraries like 🐼 pandas, 🧮 numpy, 🤖 sklearn, 📈matplotlib, and 📉plotly...</p>
-										<p>I work with data visualization tools such as 📊 PowerBI & Tableau</p>
-										<p>Exploring Machine Learning, General AI, and LLMs</p>
-										<p>Using Database Management Systems like 🛢️ DB2, 🖥️ MySQL, 🍃 MongoDB</p>
-									  </div>
-									<h2>Certification</h2>
-									<ul style="list-style-type: none;">
-										<li>
-											<a href="https://www.hackerrank.com/certificates/fc695e6c205b" class="icon brands fa-hackerrank fa-2x">
-											  <span class="label">Hacker Rank</span>
-											  <p style="display: inline; margin-left: 10px;">Hacker Rank SQL (Advanced) Certificate</p>
-											</a>
-										  </li>	
-										  
-										<style>
-											.icon-custom-1{
-											  width: 160px; /* Adjust the width as needed */
-											  height: auto;
-											  vertical-align: middle; /* Aligns the image with the text */
-											  margin-right: 10px; /* Space between the icon and text */
-											  border: none; /* Ensures no border is applied */
-											}
-											
-										</style>
-
-										<li>
-											  <img src="images/NTU.webp" alt="National Taiwan University Logo" class="icon-custom-1">
-											  <p style="display: inline;">Data Analytics with Power BI</p>
-											</a>
-										</li>
-									</ul>
+				<!-- Two -->
+				<section id="two" class="wrapper style2 fade-up">
+					<div class="inner">
+						<h2>Skills & Experience</h2>
+					<div class="inner">
+						<div class="timeline">
+							<div class="timeline-item">
+								<div class="timeline-content" style="background-color: #ffcc80;">
+									<h3>2006 - 2008</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nisi non neque molestie finibus. Vivamus sagittis est accumsan convallis</p>
 								</div>
 							</div>
-						</section>
+							<div class="timeline-item">
+								<div class="timeline-content" style="background-color: #90a4ae;">
+									<h3>2006 - 2008</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nisi non neque molestie finibus. Vivamus sagittis est accumsan convallis</p>
+								</div>
+							</div>
+							<div class="timeline-item">
+								<div class="timeline-content" style="background-color: #ffab91;">
+									<h3>2000 - 2002</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nisi non neque molestie finibus. Vivamus sagittis est accumsan convallis</p>
+								</div>
+							</div>
+							<div class="timeline-item">
+								<div class="timeline-content" style="background-color: #a5d6a7;">
+									<h3>2002 - 2004</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nisi non neque molestie finibus. Vivamus sagittis est accumsan convallis</p>
+								</div>
+							</div>
+							<div class="timeline-item">
+								<div class="timeline-content" style="background-color: #80deea;">
+									<h3>2004 - 2006</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nisi non neque molestie finibus. Vivamus sagittis est accumsan convallis</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+
 
 				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+					<section id="three" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Get In Touch With Me</h2>
 							<div class="split style1">
