--- a/index.html
+++ b/index.html
@@ -112,36 +112,50 @@
 				<section id="two" class="wrapper style2 fade-up">
 					<div class="inner">
 						<h2>Skills & Experience</h2>
+						<div class="additional-info">
+							<p><strong>Software:</strong> Python | SQL</p>
+							<p><strong>Libraries:</strong> Pandas | NumPy | Scikit-Learn | Seaborn | Plotly | Matplotlib</p>
+							<p class="margin-bottom"><strong>Technologies:</strong> Excel | Power BI | Tableau | Looker Studio</p>
+							<p></p>
+						</div>
 					<div class="inner">
 						<div class="timeline">
 							<div class="timeline-item">
-								<div class="timeline-content" style="background-color: #ffcc80;">
-									<h3>2006 - 2008</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nisi non neque molestie finibus. Vivamus sagittis est accumsan convallis</p>
+								<div class="timeline-content" style="background-color: #D1D8C5;">
+									<h4>2023 - 2024</h4>
+									<p>IE School of Science and Technology<br>
+										📍 Madrid, Spain<br>
+										<span class="smaller-text">
+											- MSc in Big Data & Business Analytics<br>
+											- Specialization in Advanced AI and Retail Industry<br>
+											- 7th worldwide in the QS rankings (2023)
+										</span>
+									</p>
 								</div>
 							</div>
 							<div class="timeline-item">
-								<div class="timeline-content" style="background-color: #90a4ae;">
-									<h3>2006 - 2008</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nisi non neque molestie finibus. Vivamus sagittis est accumsan convallis</p>
+								<div class="timeline-content" style="background-color: #D1D8C5;">
+									<h4>2022 - 2023</h4>
+									<p>Client Experience Specialist @ Forma<br>
+										📍 Remote, United States<br>
+										<span class="smaller-text">
+										- Streamlined processes for top tech firms, achieving rapid query resolution<br>
+										- Analyzed customer feedback to implement strategic improvements, raising satisfaction rates to over 95%
+										</span>
+									</p>
 								</div>
 							</div>
 							<div class="timeline-item">
-								<div class="timeline-content" style="background-color: #ffab91;">
-									<h3>2000 - 2002</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nisi non neque molestie finibus. Vivamus sagittis est accumsan convallis</p>
-								</div>
-							</div>
-							<div class="timeline-item">
-								<div class="timeline-content" style="background-color: #a5d6a7;">
-									<h3>2002 - 2004</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nisi non neque molestie finibus. Vivamus sagittis est accumsan convallis</p>
-								</div>
-							</div>
-							<div class="timeline-item">
-								<div class="timeline-content" style="background-color: #80deea;">
-									<h3>2004 - 2006</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nisi non neque molestie finibus. Vivamus sagittis est accumsan convallis</p>
+								<div class="timeline-content" style="background-color: #D1D8C5;">
+									<h4>2021 - 2022</h4>
+									<p>
+										Sales Manager @ W Taipei<br>
+										📍 Taipei, Taiwan<br>
+										<span class="smaller-text">
+											- Managed 30+ corporate accounts, achieving ~$5 million in sales during COVID-19<br>
+											- Enhanced project efficiency with cross-functional teams, reducing turnaround time by 20%
+										</span>
+									</p>
 								</div>
 							</div>
 						</div>
@@ -152,7 +166,7 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Get In Touch With Me</h2>
+							<h2>Get in Touch With Me</h2>
 							<div class="split style1">
 								<section>
 									<ul class="contact">
