--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@
 					<div class="inner">
 						<h2>Skills & Experience</h2>
 						<div class="additional-info">
-							<p><strong>Software:</strong> Python | SQL</p>
-							<p><strong>Libraries:</strong> Pandas | NumPy | Scikit-Learn | Seaborn | Plotly | Matplotlib</p>
-							<p class="margin-bottom"><strong>Technologies:</strong> Excel | Power BI | Tableau | Looker Studio</p>
+							<p><strong>Programming Languages:</strong> Python | SQL</p>
+							<p><strong>Libraries:</strong> Pandas | NumPy | Scikit-Learn | Keras| Seaborn | Plotly</p>
+							<p><strong>Technologies/ Software Tools:</strong> Excel | Power BI | Tableau | Looker Studio</p>
+							<p class="margin-bottom"><strong>Soft Skills:</strong> Cross-functional Communication | Storytelling in Presentation | Proactive problem-solver</p>
 							<p></p>
 						</div>
 					<div class="inner">
@@ -139,7 +140,7 @@
 									<p>Client Experience Specialist @ Forma<br>
 										📍 Remote, United States<br>
 										<span class="smaller-text">
-										- Streamlined processes for top tech firms, achieving rapid query resolution<br>
+										- Streamlined employee benefit processes for top tech firms, achieving rapid query resolution<br>
 										- Analyzed customer feedback to implement strategic improvements, raising satisfaction rates to over 95%
 										</span>
 									</p>
@@ -152,7 +153,7 @@
 										Sales Manager @ W Taipei<br>
 										📍 Taipei, Taiwan<br>
 										<span class="smaller-text">
-											- Managed 30+ corporate accounts, achieving ~$5 million in sales during COVID-19<br>
+											- Managed 30+ corporate accounts, achieving ~$1.5 million USD in sales during COVID-19<br>
 											- Enhanced project efficiency with cross-functional teams, reducing turnaround time by 20%
 										</span>
 									</p>
