--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div class="inner">
 						<div class="content">
 							<h1 class="underline">Hello, I'm Jessica,</h1>
-							<h1>a data scientist passionate about using ML & analytics to uncover insights</h1>
+							<h1>a data analyst passionate about using ML & analytics to uncover insights</h1>
 							<ul class="actions">
 								<li><a href="JessicaHsieh_Resume.pdf" download class="button download-btn">Download My Resume</a></li>
 							</ul>
@@ -114,7 +114,7 @@
 						<h2>Skills & Experience</h2>
 						<div class="additional-info">
 							<p><strong>Programming Languages:</strong> Python | SQL</p>
-							<p><strong>Libraries:</strong> Pandas | NumPy | Scikit-Learn | Keras| Seaborn | Plotly</p>
+							<p><strong>Libraries:</strong> Pandas | NumPy | Scikit-Learn | Plotly</p>
 							<p><strong>Technologies/ Software Tools:</strong> Excel | Power BI | Tableau | Looker Studio</p>
 							<p class="margin-bottom"><strong>Soft Skills:</strong> Cross-functional Communication | Storytelling in Presentation | Proactive problem-solver</p>
 							<p></p>
