--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
 							</style>
 							<div class="projects-container">
 								<section class="project">
+									<img src="images/nlp.png" alt="NLP image">
+									<h3>Resume and Job Match Using NLP</h3>
+									<p>This project was created to address the challenges of finding a job in a competitive market. In 2024, the job market is particularly tough, and it's crucial to enhance our chances by improving our CVs and speeding up the job search process. By leveraging NLP, we want to analyzes and matches CVs with job descriptions, ensuring that job seekers present their qualifications in the best possible light.</p>
+									<div class="skills">
+										<span class="skill-icon">Python</span>
+										<span class="skill-icon">NLP</span>
+										<span class="skill-icon">SBERT</span>
+										<span class="skill-icon">KeyBERT</span>
+									</div>
+									<ul class="actions">
+										<li><a href="https://github.com/jessih828/NLP-Resume-Job-Match" class="button small-button">GitHub Repo</a></li>
+									</ul>
+								</section>
+								<section class="project">
 									<img src="images/heart_disease_app.png" alt="heart disease image">
 									<h3>Heart Disease Prediction (Streamlit)</h3>
 									<p>The purpose of this app is to showcase my machine learning skills by building and evaluating predictive models for heart disease. This includes demonstrating the use of various evaluation metrics and the importance of hyperparameter tuning in creating effective models</p>
