--- a/index.html
+++ b/index.html
@@ -141,13 +141,12 @@
 						<div class="timeline">
 							<div class="timeline-item">
 								<div class="timeline-content" style="background-color: #D1D8C5;">
-									<h4>2023 - 2024</h4>
-									<p>IE School of Science and Technology<br>
-										📍 Madrid, Spain<br>
+									<h4>2024 - Current </h4>
+									<p>Data Scientist Intern @ UPRYSE<br>
+										📍 Remote <br>
 										<span class="smaller-text">
-											- MSc in Big Data & Business Analytics<br>
-											- Specialization in Advanced AI and Retail Industry<br>
-											- 7th worldwide in the QS rankings (2023)
+											- Employed logistic regression/tree-based models to identify high-value users, resulting in a 15% increase in user values<br>
+											- Analyzed large datasets to extract insights and identify key trends, leading to a 25% improvement in decision-making efficiency
 										</span>
 									</p>
 								</div>
