--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
 										<li><a href="https://github.com/jessih828/NLP-Resume-Job-Match" class="button small-button">GitHub Repo</a></li>
 									</ul>
 								</section>
+
+								<section class="project">
+									<h3>Deloitte Corporate Capstone</h3>
+									<p>To support BeverageCo's horizontal expansion by leveraging data science to optimize customer acquisition and sales strategies, ensuring sustainable growth and maximizing market reach.</p>
+									<div class="skills">
+										<span class="skill-icon">Python</span>
+										<span class="skill-icon">Regression Model</span>
+										<span class="skill-icon">K-Means</span>
+										<span class="skill-icon">AIC, BIC</span>
+									</div>
+									<ul class="actions">
+										<li><a href="https://github.com/jessih828/Corporate-Project-Deloitte" class="button small-button">GitHub Repo</a></li>
+									</ul>
+								</section>
 								
 								<section class="project">
 									<img src="images/heart_disease_app.png" alt="heart disease image">
