--- a/index.html
+++ b/index.html
@@ -51,6 +51,22 @@
 							<h2>My Projects</h2>
 							<div class="projects-container">
 								<section class="project">
+									<img src="images/deloittelogo.jpg" alt="deloittelogo">
+									<h3>Deloitte Corporate Capstone</h3>
+									<p>To support BeverageCo's horizontal expansion by leveraging data science to optimize customer acquisition and sales strategies, ensuring sustainable growth and maximizing market reach.</p>
+									<div class="skills">
+										<span class="skill-icon">Python</span>
+										<span class="skill-icon">Regression Model</span>
+										<span class="skill-icon">K-Means</span>
+										<span class="skill-icon">AIC, BIC</span>
+										<span class="skill-icon">Clustering</span>
+									</div>
+									<ul class="actions">
+										<li><a href="https://github.com/jessih828/Corporate-Project-Deloitte" class="button small-button">GitHub Repo</a></li>
+									</ul>
+								</section>
+
+								<section class="project">
 									<img src="images/nlp.png" alt="NLP image">
 									<h3>NLP Resume and Job Match</h3>
 									<p>Addresses job market challenges by using NLP to match CVs with job descriptions, enhancing candidates' chances in a competitive 2024 job market</p>
@@ -62,20 +78,6 @@
 									</div>
 									<ul class="actions">
 										<li><a href="https://github.com/jessih828/NLP-Resume-Job-Match" class="button small-button">GitHub Repo</a></li>
-									</ul>
-								</section>
-
-								<section class="project">
-									<h3>Deloitte Corporate Capstone</h3>
-									<p>To support BeverageCo's horizontal expansion by leveraging data science to optimize customer acquisition and sales strategies, ensuring sustainable growth and maximizing market reach.</p>
-									<div class="skills">
-										<span class="skill-icon">Python</span>
-										<span class="skill-icon">Regression Model</span>
-										<span class="skill-icon">K-Means</span>
-										<span class="skill-icon">AIC, BIC</span>
-									</div>
-									<ul class="actions">
-										<li><a href="https://github.com/jessih828/Corporate-Project-Deloitte" class="button small-button">GitHub Repo</a></li>
 									</ul>
 								</section>
 								
